# hypr-recall

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: guide.html  index.html
src/: color.rs  config.rs  edit.rs  hyprland.rs  list.rs  lock.rs  log.rs  main.rs  restore.rs  save.rs  session.rs  status.rs
