[package]
name = "hypr-recall"
version = "0.1.0"
edition = "2021"
description = "Save and restore Hyprland window sessions with scrolling layout column order and width support"
license = "MIT"

[[bin]]
name = "hypr-recall"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
items_after_test_module = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
str_to_string = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "process", "time", "macros", "sync"] }
