[package]
name = "hypr-recall"
version = "0.2.0"
edition = "2021"
description = "Save and restore Hyprland window sessions with scrolling layout column order and width support"
license = "MIT"
repository = "https://github.com/nnthnn/hypr-recall"
keywords = ["hyprland", "wayland", "session", "window-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "hypr-recall"
path = "src/main.rs"

[[bin]]
name = "hypr-recall-overlay"
path = "src/bin/overlay.rs"
required-features = ["overlay"]

[features]
overlay = ["dep:gtk4", "dep:gtk4-layer-shell", "dep:gdk-pixbuf"]

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
items_after_test_module = { level = "warn", priority = -1 }
too_many_lines = "allow"
str_to_string = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gdk-pixbuf = { version = "0.22.0", optional = true }
gtk4 = { version = "0.11.4", optional = true }
gtk4-layer-shell = { version = "0.8.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "process", "time", "macros", "sync"] }
toml = "1.1.2"
